--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,10 @@
+html,
+body,
 #root {
-  width: 100vw;
-  height: 100vh;
-}
-
-body {
-  margin: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
